<resources>
    <string name="app_name">AllyShip</string>
    <string name="action_settings">Settings</string>
    <string name="search_view_hint">Search for officials by name or try searching by your City, State, or Zip Code. </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="favorite">Favorite</string>
    <string name="content_description_favorite">Notifications</string>
    <string name="search">"Search "</string>
    <string name="content_description_search">Search icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_name">Political Name</string>
    <string name="course_rating">Percentage score</string>
    <string name="position_aspiring">Position Aspiring</string>
    <string name="top_searches">TOP SEARCHES</string>
    <string name="searchforhiny">Search</string>
    <string name="relatedquery">Related Officials</string>
    <string name="topresult">TOP RESULTS</string>
    <string name="profile">PROFILE</string>
    <string name="legislatorsname">Kamala Harris</string>
    <string name="LegislativeOffice">Senator (D)</string>
    <string formatted="false" name="allyScorePer">90%</string>
    <string name="allyScore">Ally Score</string>
    <string name="LegislativeOfficeBio">In 2017, Kamala D. Harris was sworn in as a United States Senator for California, the second African-American woman and first South Asian-American senator in history. She serves on the Homeland Security and Governmental Affairs Committee, the Select Committee on Intelligence, the Committee on the Judiciary, and the Committee on the Budget.</string>
    <string name="socialLinks">SOCIAL MEDIA</string>
    <string name="email">EMAIL</string>
    <string name="rating_tv">RATE THIS OFFICIAL</string>
    <string name="ratingDescTv">Is Kamala Harris actively supporting Black and traditionally marginalized communities? Give us your rating. You may update anytime.</string>
    <string name="recentVotesTv">RECENT LEGISLATIVE VOTES</string>
    <string name="legislation1">S. 23683</string>
    <string formatted="false" name="legislation1Desc">Requires small hub airports to maintain a lactation area for nursing mothers and a baby changing table in at least one men\'s and one women\'s.</string>
    <string name="button_send">MORE DETAILS</string>
    <string name="agree_ornot">Do you agree or Disagree with Kamala/s Vote</string>
    <string name="agree_ornotupdate">Your response has been recorded for this measure. You said:</string>
    <string name="how1">How kamala harris votes:</string>
    <string name="legislation2">S. 1380</string>
    <string formatted="false" name="legislation2Desc">Requires a federal judge in criminal proceedings to issue an order confirming the obligation of the prosecutor to disclose exculpatory evidence.</string>
    <string name="txt_desc">Is Kamala harris actively working to improve black and other marginalized communities in the following areas? your ratings will contribute to the allyscore</string>
    <string name="rat1">Economic Opprtunities</string>
    <string name="rat2">Health Care Access</string>
    <string name="rat3">Education Access</string>
    <string name="rat4">Criminal Justice Reforem</string>
    <string name="rat5">Immigration</string>
    <string name="thanks_rating">Thanks for rating Kamala Harris and contributing to their Ally Score. YOur Action helps hold ellected officials accountable to the people they present</string>
    <string name="leg_3_hit">Friendly Airport for Mothers Improvement Act</string>
    <string name="leg_3_desc_txt">This bill requires small hub airports to maintain a lactation area for nrsing mothers and a baby changing table in at least one men\'s and one women\'s restroom in each passengers terminal building of the airport. Currently, medium and large hub airports most comply with this requirements by FY2021. The bill requires small hub airports to be in compliance by FY2023</string>
    <string name="hyperlink">(Source:<a href="https://wikipedia.com">Library of Congress</a>)</string>
    <string name="kamala_vote">Kamala voted YES on HB 123-45. Do you agree or disagree with that Vote?</string>
    <string name="response">Your respose has been Recorded</string>
    <string name="descOfWhat">The AllyScore Represents the elected level of support for Black and marginalized communities,</string>
    <string name="det_text">The Ally Score is calculated based on several data inputs including, but not limited to, voting history, legislation sponsorship, public remarks, and user ratings.</string>
</resources>