<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/titleTextLeg"
            android:paddingTop="@dimen/margin_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="S. 2638"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:layout_conversion_absoluteHeight="47dp"
            tools:layout_editor_absoluteY="45dp"
            tools:layout_editor_absoluteX="146dp"
            tools:layout_conversion_absoluteWidth="207dp" />

    <ImageView
            android:id="@+id/close3"
            android:layout_width="49dp"
            android:layout_height="46dp"
            android:src="@drawable/ic_baseline_close_24"
            tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="346dp" />

    <TextView
            android:id="@+id/legislation3"
            app:layout_constraintTop_toBottomOf="@id/titleTextLeg"
            android:layout_width="351dp"
            android:layout_height="31dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/leg_3_hit"
            tools:layout_editor_absoluteX="16dp"
            android:layout_marginTop="12dp" />

    <TextView
            android:id="@+id/legislation3Desc"
            app:layout_constraintTop_toBottomOf="@id/legislation3"
            android:layout_width="342dp"
            android:layout_height="138dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:text="@string/leg_3_desc_txt"
            tools:layout_editor_absoluteX="16dp"
            android:layout_marginTop="12dp" />
    <TextView
            android:id="@+id/hyperLink"
            app:layout_constraintTop_toBottomOf="@id/legislation3Desc"
            android:layout_width="349dp"
            android:layout_height="54dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:text="@string/hyperlink"
            tools:layout_editor_absoluteX="16dp"
            android:layout_marginTop="12dp" />

    <TextView
            android:id="@+id/kamalsVote"
            app:layout_constraintTop_toBottomOf="@id/hyperLink"
            android:layout_width="349dp"
            android:layout_height="54dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:text="@string/kamala_vote"
            tools:layout_editor_absoluteX="16dp"
            android:layout_marginTop="12dp" />

    <Button
            android:id="@+id/btnsubmitagree2"
            android:backgroundTint="@color/black"
            android:layout_width="110dp"
            android:layout_height="46dp"
            app:layout_constraintTop_toBottomOf="@id/kamalsVote"
            android:layout_marginTop="20dp"
            tools:layout_editor_absoluteX="75dp"
            android:text="AGREE" />

    <Button
            android:id="@+id/btnsubmitagree3"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_width="110dp"
            android:layout_height="46dp"
            app:layout_constraintLeft_toRightOf="@+id/btnsubmitagree2"
            android:text="DISAGREE"
            tools:layout_editor_absoluteY="437dp"
            android:layout_marginLeft="48dp" />

    <TextView
            android:id="@+id/status2"
            app:layout_constraintTop_toBottomOf="@id/btnsubmitagree3"
            android:layout_width="353dp"
            android:layout_height="28dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:text="@string/response"
            tools:layout_editor_absoluteX="16dp"
            android:gravity="center"
            android:layout_marginTop="12dp" />


</androidx.constraintlayout.widget.ConstraintLayout>